--- a/stylesv2.css
+++ b/stylesv2.css
@@ -14,12 +14,12 @@
 
 .logo{
 
-  font-size: 500%;
+  font-size: 60px;
   font-family: 'Mukta Mahee';
   font-weight: 700;
   width: fit-content;
   padding-top: 0px;
-  margin-top: 89px;
+  margin-top: 64px;
  margin-left: 30px;
   color: white;
   transition: color 0.3s ease;
@@ -31,12 +31,40 @@
   
 }
 
-@media (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   /* Apply changes only for small screens */
+  .body{
+
+  margin-top: 0px;
+  padding-top: 0px;
+
+
+
+  }
   .logo {
-    font-size: 2em; /* Decrease font size for small screens */
+    font-size: 3rem; /* Decrease font size for small screens */
+    vertical-align: middle;
+    margin-top: 50px;
     
   }
+  .header {
+    
+    
+    
+    right: 0;
+    left: 0;
+    
+  }
+
+  .menu-hamburguer {
+    height: 0.5em; /* Decrease font size for small screens */
+    margin-right: 10px;
+    
+  }
+
+
+
+
 }
 
 .header.scrolled .logo {
@@ -50,21 +78,20 @@ color: black;
   flex-direction: row;
   background-color: aqua;
   justify-content: space-between;
-  margin-top: 30px;
+  margin-top: -8px;
   transition: background-color 0.3s ease;
-  height: 4rem;
+  height: 4.1rem;
   left: 0;
   right: 0;
   align-items: center;
   overflow: hidden;
  
   user-select: none;
+  position: fixed;
  
   
   
 }
-
-
 
 .header.scrolled {
 background-color: white;
@@ -74,7 +101,7 @@ background-color: white;
 
 .photocover{
   max-width: 100vw;
-  margin-top: -8px;
+  margin-top: 70px;
   margin-left: -8px;
   margin-right: -8px;
   overflow: hidden;
@@ -94,13 +121,7 @@ background-color: white;
 
  }
 
- @media (max-width: 767px) {
-  /* Apply changes only for small screens */
-  .menu-hamburguer {
-    height: 5em; /* Decrease font size for small screens */
-    
-  }
-}
+ 
 
 
 
@@ -695,6 +716,7 @@ position: relative;
 height: 225px; /* Adjust the height to the desired original size in pixels */
 margin-bottom: 30px;
 width: 100%;
+display: none;
 
 }
 
